[package]
name = "dolores"
version = "0.1.0"
authors = ["Łukasz Niemier <lukasz@niemier.pl>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"

[dependencies]
color-eyre = "0.5.11"
async-trait = "0.1"
bincode = "1.3"
nix = "0.23"
rand = "0.8"
rcgen = "0.8"
rustls = "0.20"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1.26"
tracing-subscriber = "0.3"
strum = { version = "0.23", features = ["derive"] }
