[package]
name = "dolores"
version = "0.1.0"
authors = ["Łukasz Niemier <lukasz@niemier.pl>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"

[dependencies]
askama = "0.11.1"
async-stream = "0.3"
async-trait = "0.1"
bincode = "1.3"
clap = { version = "3.0", features = ["derive", "env"] }
color-eyre = "0.6"
hyper = { version = "0.14", features = ["full"] }
matchit = "0.5.0"
nix = "0.23"
once_cell = "1.10"
rand = "0.8"
rcgen = { version = "0.9", features = ["pem", "x509-parser"] }
rustls = "0.20"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1.26"
tracing-subscriber = "0.3"
http = "0.2.6"
